Fix logo and title on mobile

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -26,7 +26,6 @@
       display: inline-block;
       pointer-events: none;
       margin-right: 1.3rem;
-      flex: 1;
     }
 
     .App-title {
@@ -42,5 +41,20 @@
   .home-link:focus,
   .home-link:hover {
     border: 4px solid var(--cfa-magenta);
+  }
+
+  @media only screen and (max-width: 800px) {
+    .home-link {
+      padding: 0.5rem;
+      justify-content: start;
+
+      .App-logo {
+        width: 7rem;
+        text-align: left;
+      }
+      .App-title {
+        font-size: 1.75rem;
+      }
+    }
   }
 }
